# distributed-llm

./: .gitignore  Dockerfile  README.md  config.json.example  hosts.txt  mise.toml  pipeline_inference.py  pyproject.toml
.claude/research/: backlog.md  config.yml  journal.md  journal_archive.md  state.json
results/: Iter1.jsonl  Iter3.jsonl  Iter4.jsonl  Iter7.jsonl  Iter8.jsonl  Iter9.jsonl  bench_all_nodes.jsonl  bench_compute_ceiling.jsonl  draft_acceptance.jsonl
scripts/: bench_all_nodes.py  bench_compute_ceiling.py  estimate_draft_acceptance.py  pipeline_fill_microbench.py
tests/: conftest.py  test_bench_all_nodes.py  test_bench_compute_ceiling.py  test_collect_results.py  test_estimate_draft_acceptance.py  test_microbatch_bench.py  test_pipeline_fill_microbench.py  test_pipeline_microbatch_bugfix.py
tools/: __init__.py  cluster_control.py  collect_results.py  common.py  debug_tools.py  deploy.py  gemma4_layer.py  healthcheck.py  inference_client.py  predict.py  setup_registry.py  show_logs.py  split_model.py
