# ====================================================================
# pyproject.toml - 分散LLM推論パイプライン プロジェクト定義
# ====================================================================
#
# uv + hatch を用いたPythonプロジェクトの定義。
# PyTorch CPU版は代替インデックスから取得する。
# ====================================================================

[project]
name = "distributed-llm"
version = "0.1.0"
description = "超多段CPUパイプライン並列 LLM 分散推論システム"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "torch",
    "transformers",
    "safetensors",
    "huggingface_hub",
    "intel-openmp",
    "accelerate",
]

# PyTorch CPU版は代替インデックスから取得する
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
