# ====================================================================
# pyproject.toml - Distributed LLM Inference Pipeline Project Definition
# ====================================================================
#
# Python project definition using uv + hatch.
# PyTorch CPU version is obtained from an alternate index.
# ====================================================================

[project]
name = "distributed-llm"
version = "0.1.0"
description = "Multi-stage CPU Pipeline Parallel LLM Distributed Inference System"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "torch",
    "transformers",
    "safetensors",
    "huggingface_hub",
    "intel-openmp",
    "accelerate",
]

# PyTorch CPU version is obtained from an alternate index
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
